# openvino_cmake_startup_project

./: .gitignore  CMakeLists.txt  README.md
openvino_startup/: CMakeLists.txt  openvino_startup.cpp  openvino_startup.h
setup_files/: config_environment.sh  intel-openvino.conf  intel-openvino.sh
